Install Template: Bug Menu Mobile

--- a/resources/scss/styles.scss
+++ b/resources/scss/styles.scss
@@ -8,6 +8,8 @@
 @import 'bootstrap/scss/bootstrap';
 @import '~bootstrap-icons/font/bootstrap-icons.css';
 @import '_mixins.scss';
+@import '~@fortawesome/fontawesome-free/scss/fontawesome';
+@import '~@fortawesome/fontawesome-free/scss/solid';
 
 @import '_helper.scss';
 @import '_reboot.scss';
